2004-04-30 Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* cong-menus.c: Added new menu item Help/Homepage
	that will open www.conglomerate.org in browser.
	See bug #134966 for details.

2004-04-30 hondaguru  <hondaguru@earthlink.net>

	* cong-location.c:
	Prevent cong_location_calc_word_extent to go beyond the end.

2004-04-29 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

        * cong-error-dialog.h, cong-error-dialog.c: Add new
	parameters to function cong_error_dialog_with_convenience
	that defines the stock for cancel button and
	the default button of dialog.
	
	* cong-error-file-open.c, cong-file-open.c, plugin-validate.c:
	Updated use of those function.

2004-04-26 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
         
        * cong-edit-find-and-replace.c: New find and replace implementation
	mostly taken from gedit/dialogs/gedit-replace-dialog.c
	
	* cong-edit-find-and-replace.h: Defined structure to hold current
	find data.

	* cong-document.c, cong-document.h: Structure that describe
	current find data associated with document
	* cong-selection.h, select.c, xmledig.c: New function
	cong_selection_get_selected_text now used in xmledit.c
	and cong-edit-find-and-replace.c

2004-04-17  David Hoover <karma@deadmoose.com>

	Changes to LOTS of files, adding gtk-doc style comments to most
        functions. (Bug 123318) Lots are currently placeholder comments,
        and will be filled in later.

2004-03-17  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Enabled useless, but harmless lines on cong-marshal.[ch] generation.

2004-03-15  Geert Stappers <stappers@stappers.nl>

	* marshal.make

	New file, but it is just a workaround.
	(see http://bugzilla.gnome.org/show_bug.cgi?id=137248 for details)

	* Makefile.am

	marshal.make for the time being in the tarball.

2004-03-15  Johannes H?lzl <johannes.hoelzl@gmx.de> (ChangeLog by GSt)

	* cong.marshal

	New file

	* Makefile.am

	Generate cong-marshal.c & cong-marshal.h from cong.marshal
