@@ -1,3 +1,9 @@
+2004-05-01 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
+
+	* cong-node.c: When determining whitespace handling of 
+	the text node, first look at xml:space attribute.
+	Bug #131746 
+
 2004-04-30 Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
 	* cong-menus.c: Added new menu item Help/Homepage
